[gd_scene load_steps=11 format=2]

[ext_resource path="res://CameraTarget.gd" type="Script" id=1]
[ext_resource path="res://analog/analog.tscn" type="PackedScene" id=2]
[ext_resource path="res://icon.png" type="Texture" id=3]
[ext_resource path="res://Player.gd" type="Script" id=4]
[ext_resource path="res://Slime.tscn" type="PackedScene" id=5]
[ext_resource path="res://Character.tscn" type="PackedScene" id=6]

[sub_resource type="SpatialMaterial" id=1]
albedo_texture = ExtResource( 3 )

[sub_resource type="QuadMesh" id=2]
material = SubResource( 1 )
size = Vector2( 10, 10 )

[sub_resource type="BoxShape" id=3]

[sub_resource type="CubeMesh" id=4]

[node name="main" type="Spatial"]

[node name="Level" type="Spatial" parent="."]

[node name="Floor" type="MeshInstance" parent="Level"]
transform = Transform( 10, 0, 0, 0, -1.62921e-06, 1, 0, -10, -1.62921e-07, 0, 0, 0 )
mesh = SubResource( 2 )
material/0 = null

[node name="StaticBody" type="StaticBody" parent="Level"]
transform = Transform( 7.07107, 0, 0.707107, 0, 1, 0, -7.07107, 0, 0.707107, -11, 1, -1 )
collision_mask = 15

[node name="CollisionShape" type="CollisionShape" parent="Level/StaticBody"]
shape = SubResource( 3 )

[node name="MeshInstance" type="MeshInstance" parent="Level/StaticBody/CollisionShape"]
mesh = SubResource( 4 )
material/0 = null

[node name="CenterContainer" type="CenterContainer" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Analog" parent="CenterContainer" instance=ExtResource( 2 )]
position = Vector2( 360, 1120 )
_isDynamicallyShowing = true

[node name="Panel" type="Panel" parent="."]
anchor_right = 1.0
anchor_bottom = 0.052
margin_bottom = -0.559998
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label" type="Label" parent="Panel"]
margin_right = 40.0
margin_bottom = 14.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="InputToggle" type="Button" parent="Panel"]
margin_left = 617.0
margin_right = 720.0
margin_bottom = 66.0
toggle_mode = true
pressed = true
text = "KEYBOARD"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="CameraFollowToggle" type="Button" parent="Panel"]
margin_left = 475.0
margin_right = 603.0
margin_bottom = 66.0
toggle_mode = true
text = "FOLLOW CAMERA"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Camera" type="Camera" parent="."]
transform = Transform( 1, 0, 0, 0, 0.702153, 0.712026, 0, -0.712026, 0.702153, 0, 25.057, 36.56 )
current = true
size = 10.0

[node name="InterpolatedCamera" type="InterpolatedCamera" parent="."]
transform = Transform( 1, 0, 0, 0, 0.702153, 0.712026, 0, -0.712026, 0.702153, 0, 25.0571, 36.5597 )
target = NodePath("../Player/CameraTarget")
speed = 2.0
enabled = true

[node name="Player" parent="." instance=ExtResource( 6 )]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 1.5, 0 )
script = ExtResource( 4 )

[node name="CameraTarget" type="Position3D" parent="Player"]
transform = Transform( 1, 0, 0, 0, 0.731354, 0.681998, 0, -0.681998, 0.731354, 0, 23, 30 )
script = ExtResource( 1 )
distance = 30.0
height = 22.0
angle = -43.0

[node name="Enemies" type="Node" parent="."]

[node name="Slime" parent="Enemies" instance=ExtResource( 5 )]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 1, 27 )

[node name="Slime3" parent="Enemies" instance=ExtResource( 5 )]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 2.83649, 1, 25.4809 )

[node name="Slime2" parent="Enemies" instance=ExtResource( 5 )]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, -12.8935, 1, -3.83229 )
[connection signal="toggled" from="Panel/InputToggle" to="Player" method="_on_InputToggle_toggled"]
[connection signal="toggled" from="Panel/CameraFollowToggle" to="Player" method="_on_CameraFollowToggle_toggled"]
